--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,9 @@
 .elements {
-  display: grid;
-  grid-template-columns: repeat(3, max-content);
+  max-width: 880px;
+  display: flex;
+  flex-wrap: wrap;  
   gap: 20px 17px;
+  justify-content: center;
 }
 
 @media screen and (max-width: 320px) {
