--- a/blocks/footer/__caption/footer__caption.css
+++ b/blocks/footer/__caption/footer__caption.css
@@ -6,9 +6,10 @@
   color: #545454 ;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 879px) {
   .footer__caption {
     font-size: 14px;
-    line-height: 16.94px ;
+    line-height: 16.94px;
+    margin-left: 19px;
   }  
 }
