--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,4 +1,4 @@
-.profile__add {
+/* .profile__add {
   width: 150px;
   min-height: 50px;
   border: 2px solid #fff;
@@ -14,5 +14,26 @@
   .profile__add {
     width: 282px;
     background-size: 16px 16px;
+  }  
+} */
+
+.profile__add {
+  min-width: 150px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  background-image: url(../../../images/profile-add.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #000;
+  margin-left: 18px;
+}
+
+@media screen and (max-width: 691px) {
+  .profile__add {
+    min-height: 50px;
+    width: 282px;
+    background-size: 16px 16px;
+    margin: 0;
   }  
 }
