--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,4 @@
-.profile__info {
+/* .profile__info {
   max-width: 336px;
   flex-wrap: wrap;
   display: flex;
@@ -13,5 +13,24 @@
     display: block;
     margin: 26px 0 36px;
     min-width: 282px;
+  }
+} */
+
+.profile__info {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 336px;
+  height: 73px;
+  align-content: space-between;
+  justify-content: space-between;
+  margin: 0 auto 0 0;
+}
+
+@media screen and (max-width: 691px) {
+  .profile__info {  
+    margin: 26px 0 36px;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
   }
 }
