--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,4 +1,4 @@
-.profile {
+/* .profile {
   margin: 40px 0 51px;
   max-height: 120px;
   max-width: 880px;
@@ -12,5 +12,29 @@
     max-height: 286px;
     max-width: calc(100% - 2*19px);
     flex-direction: column;
+  }  
+} */
+
+.profile {
+  margin: 40px auto 51px;
+  display: flex;
+  max-width: 880px;
+  align-items: center;
+}
+
+@media screen and (max-width: 879px) {
+  .profile {
+    max-width: calc(100% - 2*19px);
+
+  }
+}
+
+@media screen and (max-width: 691px) {
+  .profile {
+    margin: 42px auto 36px;
+    max-height: 286px;
+    max-width: calc(100% - 2*19px);
+    flex-direction: column;
+    align-content: center;
   }  
 }
