--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,7 @@
 .elements {
-  max-width: 880px;
-  display: flex;
-  flex-wrap: wrap;  
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
   gap: 20px 17px;
-  justify-content: center;
 }
 
 @media screen and (max-width: 320px) {
