--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -16,5 +16,10 @@
     width: 282px;
     background-size: 16px 16px;
     margin: 0;
-  }  
+  }
+}
+
+.profile__add:hover {
+  opacity: .6;
+  cursor: pointer;
 }
