--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,18 +1,21 @@
 .profile__description {
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
   color: #fff;
   font-size: 18px;
   line-height: 22px;
   margin: 0;
-  height: 18px;
+  min-height: 18px;
+  width: 336px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 691px) {
   .profile__description {
-    margin-top: 14px;
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
+    max-width: 282px;
   }
-} 
+}
