--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,10 +9,11 @@
 }
 
 @media screen and (max-width: 691px) {
-  .profile__info {  
-    margin: 26px 0 36px;
-    flex-direction: column;
-    position: relative;
+  .profile__info {
+    max-width: 282px;
+    margin: 26px auto 36px;
     text-align: center;
+    position: relative;
+    justify-content: center;
   }
 }
