--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,18 +1,20 @@
 .profile__name {
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   color: #fff;
   font-size: 42px;
   line-height: 48px;
   margin: 0;
-  height: 39px;
+  width: 294px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 691px) {
   .profile__name {
     font-size: 27px;
     line-height: 33px;
-    text-align: center;
-    max-height: 26px;
+    max-width: 189px;
   }
-} 
+}
