--- a/pages/index.css
+++ b/pages/index.css
@@ -17,10 +17,19 @@
 @import url(../blocks/profile/__add/profile__add.css);
 
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__card/elements__card.css);
+@import url(../blocks/card/card.css);
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__caption/elements__caption.css);
 @import url(../blocks/elements/__like/elements__like.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__caption/footer__caption.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__heading/popup__heading.css);
+@import url(../blocks/popup/__edit/popup__edit.css);
+@import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
