--- a/blocks/footer/__caption/footer__caption.css
+++ b/blocks/footer/__caption/footer__caption.css
@@ -1,9 +1,9 @@
 .footer__caption {
-  font-family: 'Inter', 'Arial', sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 21.78px; 
-  color: #545454 ;
+  line-height: 21.78px;
+  color: #545454;
 }
 
 @media screen and (max-width: 879px) {
@@ -11,5 +11,5 @@
     font-size: 14px;
     line-height: 16.94px;
     margin-left: 19px;
-  }  
+  }
 }
