--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,15 +1,13 @@
-.elements__like {
-  position: absolute;
+.card__like {
   background-image: url(../../../images/like.svg);
   width: 22px;
   height: 19px;
-  right: 20px;
-  bottom: 30px;
   border: none;
   background-color: #fff;
+  align-self: center;
 }
 
-.elements__like:hover {
+.card__like:hover {
   opacity: .5;
   cursor: pointer;
 }
