--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -3,7 +3,7 @@
   height: 50px;
   border: 2px solid #fff;
   border-radius: 2px;
-  background-image: url(../../../images/profile-add.png);
+  background-image: url(../../../images/profile-add.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-color: #000;
