--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -6,7 +6,7 @@
   line-height: 22px;
   margin: 0;
   min-height: 18px;
-  width: 336px;
+  min-width: 203px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
