--- a/blocks/card/__caption/card__caption.css
+++ b/blocks/card/__caption/card__caption.css
@@ -1,4 +1,4 @@
-.elements__caption {
+.card__caption {
   font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 24px;
@@ -6,6 +6,6 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  margin: 25px 21px 31px;
   max-width: 190px;
+  margin: 0;
 }
