--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,7 +1,6 @@
-.elements__card {
+.card {
   max-width: 282px;
-  max-height: 361px;
+  height: 361px;
   background-color: #fff;
   border-radius: 10px;
-  position: relative;
 }
