--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   background: #fff;
   border-radius: 10px;
   position: relative;
@@ -12,6 +12,6 @@
 @media screen and (max-width: 580px) {
   .popup__container {
     width: 282px;
-    height: 322px;
+    min-height: 322px;
   }
 }
