--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 336px;
-  height: 73px;
+  min-height: 73px;
   align-content: space-between;
   justify-content: space-between;
   margin: 0 auto 0 0;
@@ -15,5 +15,6 @@
     text-align: center;
     position: relative;
     justify-content: center;
+    min-height: 54px;
   }
 }
