--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,7 +5,8 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0;
-  width: 294px;
+  min-width: 110px;
+  max-width: 294px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -16,5 +17,6 @@
     font-size: 27px;
     line-height: 33px;
     max-width: 189px;
+    margin-left: 46px;
   }
 }
