--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,6 +1,8 @@
 .card {
   max-width: 282px;
-  height: 361px;
+  min-height: 361px;
   background-color: #fff;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
