--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,12 @@
 .popup {  
-  display: none;
-  
+  display: none;  
   background-color: rgba(0, 0, 0, .5);
   z-index: 1;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
 }
