--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,5 +1,6 @@
 .card__image {
-  max-width: 282px;
-  max-height: 282px;
+  min-width: 282px;
+  min-height: 282px;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
 }
