--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,8 +1,9 @@
 .card {
   max-width: 282px;
-  min-height: 361px;
+  max-height: 361px;
   background-color: #fff;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
