--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,8 @@
 .popup {  
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .3s, opacity .3s ease;
   background-color: rgba(0, 0, 0, .5);
   z-index: 1;
   align-items: center;
