добавлен модуль валидации форм

--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   background-color: #000;
   margin-left: 18px;
+  outline: none;
 }
 
 @media screen and (max-width: 691px) {
