--- a/pages/index.css
+++ b/pages/index.css
@@ -33,8 +33,12 @@
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_disabled/popup__save_disabled.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/_error/popup__input_type_error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
 
 @import url(../blocks/open-card/open-card.css);
 @import url(../blocks/open-card/__image/open-card__image.css);
