--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -7,6 +7,7 @@
   background-position: center;
   background-color: #000;
   margin-top: 15px;
+  outline: none;
 }
 
 @media screen and (max-width: 691px) {
